# nxp_imu

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  readme.md  readme.rst  setup.py
.github/workflows/: python.yaml
docs/: readme.md  unpacking_test.ipynb
docs/.ipynb_checkpoints/: unpacking_test-checkpoint.ipynb
docs/jupyter/: imu.ipynb
examples/: cal.py  test.py
gecko/: pub.py  readme.md
nxp/: AHRS.py  FXAS21002.py  FXOS8700.py  I2C.py  IMU.py  __init__.py  setup.py
nxp_imu/: AHRS.py  FXAS21002.py  FXOS8700.py  I2C.py  IMU.py  __init__.py
python/: setup.py
python/nxp_imu/: FXAS21002.py  FXOS8700.py  I2C.py  IMU.py  __init__.py
python/tests/: test.py
ros/: readme.md
ros/src/nxp_imu/: CMakeLists.txt  package.xml
ros/src/nxp_imu/nodes/: node.py
tests/: dummy.py  test.py  test_imu.py
