[tool.poetry]
name = "nxp_imu"
version = "0.6.2"
description = "python library to use the Adafruit NXP 9-Dof IMU"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/nxp_imu/"
repository = 'https://github.com/MomsFriendlyRobotCompany/nxp_imu'
# documentation = "http://..."
keywords = ['raspberry', 'pi', 'ins', 'nxp', 'imu', 'i2c']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

# [tool.poetry.scripts]
# # script_name = 'myscript:main'

[tool.poetry.dependencies]
python = ">=3.6"
smbus2 = "*"
importlib-metadata = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
# mypy = "*"

# [mypy-pi_servo_serial]
# ignore_missing_imports = True

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
